# UJ

./: .gitmodules  README.md
EMCPP/: CMakeLists.txt
EMCPP/Lab_01/: CMakeLists.txt  Matrix.cpp  MatrixWithLabel.cpp
EMCPP/Lab_02/: Matrix.h  PairOfMatrices.h  String.cpp
EMCPP/Lab_03/: function_pointers.cpp  printer.cpp
EMCPP/Lab_04/: CMakeLists.txt  compare.cpp  selectIf.cpp  template.cpp
EMCPP/Lab_05/matrices/: MatrixException.h  staticMatrix.h
EMCPP/Lab_05/tests/: mixedMatrixTest.cpp  staticMatrixTest.cpp
EMCPP/Lab_06/: CMakeLists.txt  Range.h  matrixIterator.cpp  range.cpp
EMCPP/Lab_07/: crtp.cpp  proxy.cpp  proxy.h
EMCPP/Lab_08/: VectorPolicies.h  type_traits.cpp
EMCPP/Lab_09/: CMakeLists.txt  ex_9_2_words.cpp  hamletEN.txt  hamletOUT.txt  sample.txt
EMCPP/Lab_10/: CMakeLists.txt  ex_10_1_literals.cpp
EMCPP/Lab_11/: ASCIIsum.cpp
EMCPP/Lab_11/mandelbrot/: EasyBMP.cpp  EasyBMP_BMP.h  ex_11_2_Mandelbrot.cpp
EMCPP/Lab_12/: CMakeLists.txt  string_test.cpp
EMCPP/Lab_13/: CMakeLists.txt  ex2.cpp
EMCPP/Lab_14/: CMakeLists.txt
JAVA/00-01-test-project/: README.md  settings.gradle
JAVA/02-01-spreadsheet/: build.gradle
JAVA/03-collections/: settings.gradle
JAVA/04-gvt/: build.gradle  settings.gradle
JAVA/06-kindergarten/: build.gradle  settings.gradle
JAVA/07-florida-insurance/: README.md
JAVA/09-comparator-generator/: README.md
JAVA/10-delegations-calculator/: README.md
Java/00-01-test-project/: build.gradle
Java/01-01-some-basics/: README.md  settings.gradle
Java/02-01-spreadsheet/: README.md  settings.gradle
Java/03-collections/: README.md  build.gradle
Java/04-gvt/: README.md
Java/05-map2d/: README.md  settings.gradle
Java/06-kindergarten/: README.md
Java/07-florida-insurance/: settings.gradle
Java/09-comparator-generator/: build.gradle  settings.gradle
Java/10-delegations-calculator/: build.gradle  settings.gradle
JwZP/: .gitignore
MN/: .gitignore  CMakeLists.txt
MN/C/: 1.in  (+5 more)
RPS/: Z1_K1.ipynb  Z3_K1.ipynb  Z4_K1.ipynb  Z4_K2.ipynb  Z6_K1.ipynb  Z6_K2.ipynb  Z7_K1.ipynb  Z7_K2.ipynb  Z7_K3.ipynb
emcpp/: .gitignore
emcpp/Lab_05/: CMakeLists.txt
emcpp/Lab_05/matrices/: dynamicMatrix.h
emcpp/Lab_05/tests/: dynamicMatrixTest.cpp  transpose.cpp
emcpp/Lab_07/: CMakeLists.txt  operators.cpp
emcpp/Lab_08/: CMakeLists.txt  Vector.h  VectorTraits.h  vector_policies.cpp  vector_traits.cpp
emcpp/Lab_11/: CMakeLists.txt  random.cpp
emcpp/Lab_11/mandelbrot/: EasyBMP.h  EasyBMP_DataStructures.h  EasyBMP_VariousBMPutilities.h
(+422 files in other folders)
