cmake_minimum_required(VERSION 3.15)
project(MEC++)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(Lab_01)
add_subdirectory(Lab_02)
add_subdirectory(Lab_03)
add_subdirectory(Lab_04)
add_subdirectory(Lab_05)
add_subdirectory(Lab_06)
add_subdirectory(Lab_07)
add_subdirectory(Lab_08)
add_subdirectory(Lab_09)
add_subdirectory(Lab_10)
add_subdirectory(Lab_11)
add_subdirectory(Lab_12)
add_subdirectory(Lab_13)
add_subdirectory(Lab_14)